tests/sksl/errors/ArrayUnspecifiedDimensions.glsl
### Compilation failed:

error: 1: expected array dimension
error: 2: array size must be an integer
error: 3: array size must be an integer
error: 5: missing index in '[]'
4 errors
